QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

SVN TRUNK

- Allow the build system to include an user specified LDFLAGS.

- Missing input/output-latency parameter settings now settled
  for the D-BUS controlled JACK server and firewire back-end
  driver.


0.3.11  2013-12-31  A fifth of a Jubilee.

- More preparations for Qt5 configure build.

- Interface device selection is now unified, by moving the old 
  '>' pop-up menu into the customized combo-box drop-down list
  showing all available card/device names and descriptions (on
  a patch by Arnout Engelen, thanks).

- Added include <unistd.h> to shut up gcc 4.7 build failures
  (patch by Alexis Ballier, thanks).


0.3.10  2013-04-01  The singing swan rehersal.

- Session infra-client management finally being added.

- Preparations for Qt5 migration.

- Transport tempo (BPM) precision display fixed to 4 digits.

- Color-candy (dang old ANSI terminal?) escape sequences are
  now silently stripped from jackdbus messages captured log
  (onliner from original patch by Brendan Jones, thanks).

- List ALSA device card id. string instead of device number,
  while on setup dialog.

- Japanese (ja) translation added (by Takashi Sakamoto).


0.3.9  2012-05-18  The last of the remnants.

- Killing D-BUS controlled JACK server is now made optional,
  cf. Setup/Misc/Stop JACK audio server on application exit.
  (a patch by Roland Mas, thanks).

- Added include <unistd.h> to shut up gcc 4.7 build failures.

- Make(ing) -jN parallel builds now available for the masses.

- A mis-quoting bug at the command line argument string may
  have been crippling the (unmaintained) Windows port since
  ever, leaving its main function to start jackd dead in the
  water, belly down :) now hopefully fixed (following a mail
  transaction with Stephane Letz and Mathias Nagorni, thanks).

- Currently a JACK2-only feature, the JACK version string