@@ -50,13 +50,14 @@ including a enhanced patchbay and connection control features.
 %dir %{_datadir}/icons/hicolor
 %dir %{_datadir}/icons/hicolor/32x32
 %dir %{_datadir}/icons/hicolor/32x32/apps
-#dir %{_datadir}/locale
+#dir %{_datadir}/%{name}
+#dir %{_datadir}/%{name}/translations
 #dir %{_datadir}/man
 #dir %{_datadir}/man/man1
 %{_bindir}/%{name}
 %{_datadir}/applications/%{name}.desktop
 %{_datadir}/icons/hicolor/32x32/apps/%{name}.png
-%{_datadir}/locale/%{name}_*.qm
+%{_datadir}/%{name}/translations/%{name}_*.qm
 %{_datadir}/man/man1/%{name}.1.gz
 
 %changelog
